Implemented script execution for windows